# mlops-2023-adv

./: .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
